--- a/loguin/styles.css
+++ b/loguin/styles.css
@@ -1,12 +1,12 @@
 /* Estilo general */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #2B2D31;
+    background-color: #FFFFFF;
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    justify-content: space-around;
 }
 
 * {
@@ -15,21 +15,62 @@ body {
     margin: 0;
 }
 
+html {
+    font-family: 'Red Hat Display', sans-serif;
+}
+
+/* Estilos del contenedor general */
+.general-container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+.headerlogo {
+    width: 100px;
+    height: 25px;
+    position: absolute;
+    z-index: 1;
+    top: 40px;
+    left: 40px;
+    filter: invert(100%);
+    background-image: url(./assets/Dribbble_logo_black.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+/* Estilos del side bar */
+
+.sidebar {
+    width: 450px;
+    height: 100vh;
+    overflow: hidden;
+}
+
+/* Estilos del contenedor derecho */
+
+.container-rigth {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
 /* Estilo del contenedor */
 .container {
     width: fit-content;
     height: fit-content;
-    background-color: #313338;
     padding: 20px 20px 0px 20px;
+    margin-left: 100px;
     border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     text-align: center;
     max-width: 400px;
 }
 
 /* Estilo de los títulos */
 h1 {
-    color: #ffffff;
+    color: #0D0C22;
     margin-bottom: 32px;
 }
 
@@ -43,35 +84,41 @@ form {
 
 label {
     font-weight: 200;
-    margin-bottom: 5px;
-    color: #ffffff;
+    margin-bottom: 4px;
+    margin-top: 14px;
+    color: #0D0C22;
     text-align: left;
-    font-size: 16px;
+    font-size: 15px;
+    font-weight: 600;
 }
 
 input[type="text"],
 input[type="password"] {
-    padding: 10px;
-    margin: 5px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    padding: 18px 20px;
+    margin: 0;
+    border: 2px solid #e7e7e9;
+    border-radius: 12px;
     width: 100%;
+    font-size: 14px;
+    color: #0d0c22;
 }
 
 button {
     width: 100%;
+    margin-top: 20px;
     margin-bottom: 24px;
-    background-color: #007bff;
+    background-color: #000000;
     color: #fff;
-    padding: 10px 20px;
+    padding: 16px 20px;
     border: none;
-    border-radius: 5px;
+    border-radius: 30px;
     cursor: pointer;
+    font-size: 14px;
     font-weight: bold;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #363636;
 }
 
 /* Estilo de mensaje de error */
