--- a/loguin/stylesbienvenida.css
+++ b/loguin/stylesbienvenida.css
@@ -1,12 +1,15 @@
 /* Estilo general */
 body {
-    font-family: Arial, sans-serif;
     background-color: #2B2D31;
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+}
+
+html{
+    font-family: 'Red Hat Display', sans-serif;
 }
 
 * {
